--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
 
     <div class="container">
-        <h1>Hello!
+        <h1>Weather App
 
         </h1>
-        <a href="" class="btn btn-primary">Click me</a>
+
 
     </div>
     <script src="src/app.js"></script>
