--- a/index.html
+++ b/index.html
@@ -6,21 +6,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="src/style.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Weather App
+        <div class="weather">
+            <form>
+                <div class="row">
+                    <div class="col-9">
+                        <input type="search" placeholder="Enter a city..." class="form-control search-input">
+                    </div>
+                    <div class="col-3 p-0">
+                        <input type="submit" class="btn btn-primary w-100" value="Search">
+                    </div>
 
-        </h1>
+                </div>
+            </form>
+            <div class="WeatherInfo">
+                <div class="row">
+                    <div class="col-6">
+                        <h1> Kharkiv</h1>
+                        <ul>
+                            <li>Tuesday 10:50, clear sky</li>
+                            <li>Humidity: 84%, Wind: 4.47km/h</li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
 
+
+                        <div class="d-flex weather-temperature">
+                            <img src="https://cdn-icons-png.flaticon.com/128/4814/4814268.png" alt="Clear" id="icon" />
+                            <div>
+                                <strong id="temperature">21</strong>
+                                <span class="units"> °C</span>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="WeatherForecast row">
+                <div class="col">
+                    <div class="WeatherForecastPreview">
+                        <div class="forecast-time">Tue</div>
+                        <canvas width="38" height="38">
+                            <div class="forecast-temperature">
+                                <span class="forecast-temperature-max">27°</span>
+                                <span class="forecast-temperature-min">20°</span>
+
+                            </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="WeatherForecastPreview">
+                        <div class="forecast-time">Wed</div>
+                        <canvas width="38" height="38">
+                            <div class="forecast-temperature">
+                                <span class="forecast-temperature-max">27°</span>
+                                <span class="forecast-temperature-min">18°</span>
+
+                            </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="WeatherForecastPreview">
+                        <div class="forecast-time">Thu</div>
+                        <canvas width="38" height="38">
+                            <div class="forecast-temperature">
+                                <span class="forecast-temperature-max">27°</span>
+                                <span class="forecast-temperature-min">18°</span>
+
+                            </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="WeatherForecastPreview">
+                        <div class="forecast-time">Fri</div>
+                        <canvas width="38" height="38">
+                            <div class="forecast-temperature">
+                                <span class="forecast-temperature-max">27°</span>
+                                <span class="forecast-temperature-min">18°</span>
+
+                            </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="WeatherForecastPreview">
+                        <div class="forecast-time">Sat</div>
+                        <canvas width="38" height="38">
+                            <div class="forecast-temperature">
+                                <span class="forecast-temperature-max">27°</span>
+                                <span class="forecast-temperature-min">18°</span>
+
+                            </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+        <footer>
+            "This project was coded by"
+            <a href="">Mila Polianska</a>
+            "and is"
+            <a href="">open-sourced on GitHub</a>
+            "and"
+            <a href="">hosted on Netlify</a>
+        </footer>
 
     </div>
     <script src="src/app.js"></script>
