--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
+
 </head>
 
 <body>
@@ -33,10 +35,11 @@
             <div class="WeatherInfo">
                 <div class="row">
                     <div class="col-6">
-                        <h1> Kharkiv</h1>
+                        <h1 id="city"> </h1>
                         <ul>
-                            <li>Tuesday 10:50, clear sky</li>
-                            <li>Humidity: 84%, Wind: 4.47km/h</li>
+                            <li> <span id="date">Tuesday 10:50</span> 
+                                <li id="description"></li> </li>
+                            <li>Humidity: <span id="humidity"></span> %, Wind: <span id="speed"></span> km/h</li>
                         </ul>
                     </div>
                     <div class="col-6">
@@ -45,7 +48,7 @@
                         <div class="d-flex weather-temperature">
                             <img src="https://cdn-icons-png.flaticon.com/128/4814/4814268.png" alt="Clear" id="icon" />
                             <div>
-                                <strong id="temperature">21</strong>
+                                <strong id="temperature"></strong>
                                 <span class="units"> °C</span>
                             </div>
                         </div>
