--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                     <div class="col-6">
                         <h1 id="city"> </h1>
                         <ul>
-                            <li> <span id="date">Tuesday 10:50</span> 
-                                <li id="description"></li> </li>
+                            <li> Last updated: <span id="date"></span>
+                            <li id="description"></li>
+                            </li>
                             <li>Humidity: <span id="humidity"></span> %, Wind: <span id="speed"></span> km/h</li>
                         </ul>
                     </div>
