--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 
                         <div class="d-flex weather-temperature">
-                            <img src="https://cdn-icons-png.flaticon.com/128/4814/4814268.png" alt="Clear" id="icon" />
-                            <div>
+                            <img src="" id="icon" />
+                            <div class=" temp ">
                                 <strong id="temperature"></strong>
                                 <span class="units"> °C</span>
                             </div>
