--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
     <div class="container">
         <div class="weather">
-            <form>
+            <form id="search-form" class="mb-3">
                 <div class="row">
                     <div class="col-9">
-                        <input type="search" placeholder="Enter a city..." class="form-control search-input">
+                        <input type="search" placeholder="Enter a city..." class="form-control search-input"
+                            id="city-input" autocomplete="off">
                     </div>
                     <div class="col-3 p-0">
                         <input type="submit" class="btn btn-primary w-100" value="Search">
