--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <img src="" id="icon" />
                             <div class=" temp ">
                                 <strong id="temperature"></strong>
-                                <span class="units"> °C</span>
+                                <span class="units"> <a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
 
