Api integretion daily forecast

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                             <img src="" id="icon" />
                             <div class=" temp ">
                                 <strong id="temperature"></strong>
-                                <span class="units"> <a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+                                <span class="units"> <a href="#" id="celsius-link" class="active">°C</a> | <a href="#"
+                                        id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
 
@@ -59,70 +60,10 @@
                     </div>
 
                 </div>
+
             </div>
-            <div class="WeatherForecast row">
-                <div class="col">
-                    <div class="WeatherForecastPreview">
-                        <div class="forecast-time">Tue</div>
-                        <canvas width="38" height="38">
-                            <div class="forecast-temperature">
-                                <span class="forecast-temperature-max">27°</span>
-                                <span class="forecast-temperature-min">20°</span>
-
-                            </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="WeatherForecastPreview">
-                        <div class="forecast-time">Wed</div>
-                        <canvas width="38" height="38">
-                            <div class="forecast-temperature">
-                                <span class="forecast-temperature-max">27°</span>
-                                <span class="forecast-temperature-min">18°</span>
-
-                            </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="WeatherForecastPreview">
-                        <div class="forecast-time">Thu</div>
-                        <canvas width="38" height="38">
-                            <div class="forecast-temperature">
-                                <span class="forecast-temperature-max">27°</span>
-                                <span class="forecast-temperature-min">18°</span>
-
-                            </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="WeatherForecastPreview">
-                        <div class="forecast-time">Fri</div>
-                        <canvas width="38" height="38">
-                            <div class="forecast-temperature">
-                                <span class="forecast-temperature-max">27°</span>
-                                <span class="forecast-temperature-min">18°</span>
-
-                            </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="WeatherForecastPreview">
-                        <div class="forecast-time">Sat</div>
-                        <canvas width="38" height="38">
-                            <div class="forecast-temperature">
-                                <span class="forecast-temperature-max">27°</span>
-                                <span class="forecast-temperature-min">18°</span>
-
-                            </div>
-
-                    </div>
-                </div>
-
-
+            <div class="weather-forecast" id="forecast">
+                
             </div>
 
 
