--- a/index.html
+++ b/index.html
@@ -63,18 +63,15 @@
 
             </div>
             <div class="weather-forecast" id="forecast">
-                
+
             </div>
 
 
         </div>
         <footer>
-            "This project was coded by"
-            <a href="">Mila Polianska</a>
-            "and is"
-            <a href="">open-sourced on GitHub</a>
-            "and"
-            <a href="">hosted on Netlify</a>
+
+            <a href="https://github.com/Myla-Polianska/Final-weather-app">open-sourced on GitHub</a> by Myla Polianska
+
         </footer>
 
     </div>
